This commit has begun to change the great idea page into a responsive website using a desktop first approach. Tablet and Desktop Versions are complete, Mobile is about 90% complete.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,131 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-</head>
+  <body>
+    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <div class="container">
+      <header>
+        <div class="nav-wrapper">
+          <nav class="navigation">
+            <a href="/UI-III-Flexbox/great-idea/services.html">Services</a>
+            <a href="/UI-III-Flexbox/great-idea/product.html">Product</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+          </nav>
+          <div class="logo-card">
+            <img
+              class="logo"
+              src="img/logo.png"
+              alt="Great Idea! Company logo."
+            />
+          </div>
+        </div>
+      </header>
+      <section class="cta-wrapper clearfix">
+        <div class="cta-card left">
+          <h1>
+            <p>
+              Innovation <br />On<br />
+              Demand
+            </p>
+          </h1>
 
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-</body>
+          <button>
+            Get Started
+          </button>
+        </div>
+
+        <div class="cta-card right clearfix">
+          <img src="img/header-img.png" alt="Image of a code snippet." />
+        </div>
+      </section>
+
+      <section class="content-top">
+        <div class="features">
+          <h3>Features</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+
+        <div class="about">
+          <h3>About</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+      </section>
+      <div class="center-img"></div>
+
+      <section class="content-bottom">
+        <div class="services">
+          <h3>Services</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+
+        <div class="product">
+          <h3>Product</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+
+        <div class="vision">
+          <h3>Vision</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+      </section>
+
+      <footer>
+        <h3>Contact</h3>
+
+        <address>
+          <p class="postal-address">
+            123 Way 456 Street<br />
+            Somewhere, USA<br />
+            <br />
+            1 (888) 888-8888
+            <br />
+            <br />
+            <a class="email" mailto="sales@greatidea.io">sales@greatidea.io</a>
+          </p>
+        </address>
+
+        <p class="copy">Copyright Great Idea! 2018</p>
+      </footer>
+    </div>
+  </body>
 </html>
