--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <header>
         <div class="nav-wrapper">
           <nav class="navigation">
-            <a href="/UI-III-Flexbox/great-idea/services.html">Services</a>
-            <a href="/UI-III-Flexbox/great-idea/product.html">Product</a>
+            <a href="services.html">Services</a>
+            <a href="product.html">Product</a>
             <a href="#">Vision</a>
             <a href="#">Features</a>
             <a href="#">About</a>
