More tweaks. attempting to fix bug with services footer in desktop mode

--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <header>
-        <div id="services-nav" class="nav-wrapper">
+        <div class="nav-wrapper services-nav">
           <nav class="navigation">
             <a href="services.html">Services</a>
             <a href="product.html">Product</a>
